--- a/templates/default.j2
+++ b/templates/default.j2
@@ -14,7 +14,7 @@ server {
     # Proxy connections to the application servers
     # app_servers
     location / {
-        root /var/www/html;
-        index index.nginx-debian.html;
+        root /usr/share/nginx/html;
+        index index.html;
     }
 }
